# helloworld_mcp

./: README.md  client.py  client_airbnb.py  main.py  pyproject.toml  weather.py
src/mcpserver/: __main__.py  deployment.py
