[project]
name = "helloworld-mcp"
version = "0.1.0"
description = "Test MCP Server - dummy weather Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.9.4",
]

[project.scripts]
mcp-server = "mcpserver.__main__:main"

[build-system]
# This section is necessary for building the package
# It specifies the build dependencies and the build backend
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]